fix: [CI-6287]: Aligning to mocks - part 2

--- a/src/modules/10-common/components/YAMLBuilder/PluginsPanel/PluginsPanel.module.scss
+++ b/src/modules/10-common/components/YAMLBuilder/PluginsPanel/PluginsPanel.module.scss
@@ -6,9 +6,6 @@
  */
 
 .tabs {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border: 1px solid var(--grey-250);
   width: 100%;
 }
 
